# meiso

./: .cursorignore  .gitignore  AMBER_INTEGRATION_COMPLETE.md  AMBER_ONBOARDING_REDIRECT_FIX.md  CODE_QUALITY_EVALUATION.md  ISSUE_DRAFT.md  LOTTIE_ANIMATION_GUIDE.md  NIP78_APP_SETTINGS_IMPLEMENTATION.md  ONBOARDING_IMPLEMENTATION.md  PHASE1_SUMMARY.md  PHASE4_AMBER_INTEGRATION_COMPLETE.md  PHASE5_AMBER_DECRYPT_FIX.md  README.md  RELAY_LIST_SYNC_IMPLEMENTATION.md  TOR_ORBOT_SUPPORT_COMPLETE.md  analysis_options.yaml  dev.sh  flutter_rust_bridge.yaml  generate.sh  l10n.yaml  migrate_docs_to_anytype.py  project-rules.md  pubspec.yaml  run_multi_devices.sh  start_emulator.sh  user-rules.md
.tmp_backup/: AMBER_NIP44_ENCRYPTION_COMPLETE.md  ONBOARDING_IMPLEMENTATION.md  PHASE3_CITRINE_INTEGRATION.md  RUST_KEY_MANAGEMENT_MIGRATION.md  RUST_SETUP_COMPLETE.md
android/app/: build.gradle.kts
assets/lottie/: privacy_lock.json  privacy_lock_perfect.json  privacy_lock_secure.json  privacy_padlock.json  privacy_secure_lock.json  privacy_security.json  privacy_shield_lock.json  privacy_shield_new.json
docs/: AMBER_BLACKOUT_FIX_COMPLETE.md  AMBER_FOREGROUND_RESUME_FIX.md  AMBER_PERMISSIONS_GUIDE.md  BACKGROUND_RESUME_FIX.md  CLARIFICATION_PLAINTEXT_STORAGE.md  CLEAN_ARCHITECTURE_IMPLEMENTATION_STATUS.md  CLEAN_ARCHITECTURE_REFACTORING_PLAN.md  CONFLICT_RESOLUTION.md  CURRENT_ARCHITECTURE_ANALYSIS.md  CUSTOM_LIST_ORDER_SYNC.md  DUMMY_DATA_REMOVAL.md  FEATURE_TODO_EDIT.md  FULL_IMPLEMENTATION_SUMMARY.md  GIT_WORKTREE_MULTI_AGENT_GUIDE.md  HOTFIX_COMPLETE_SUMMARY.md  HOTFIX_SUMMARY.md  INCIDENT_CLEAN_ARCHITECTURE_ROLLBACK.md  ISSUE_21_CUSTOM_LIST_SEPARATION.md  ISSUE_21_REFACTORING.md  ISSUE_33_COMPLETE_FIX_SUMMARY.md  ISSUE_33_CUSTOM_LIST_NAME_FIX.md  ISSUE_33_CUSTOM_LIST_NAME_FIX_PART2.md  ISSUE_33_FINAL_REPORT.md  ISSUE_39_PROXY_CONFIGURATION_FIX.md  ISSUE_57_FIX_SUMMARY.md  ISSUE_57_RELAY_SYNC_COMPLETE.md  ISSUE_57_RELAY_SYNC_TROUBLESHOOTING.md  ISSUE_59_RECURRING_TASKS_FIX.md  ISSUE_66_L10N_IMPLEMENTATION.md  ISSUE_MLS_BETA_PHASE8.md  KIND_30001_MIGRATION.md  MANUAL_SYNC_RESTORE.md  MIGRATION_OPTIMIZATION.md  MLS_BETA_ROADMAP.md  MLS_IMPLEMENTATION_STRATEGY.md  MLS_TEST_FLOW.md  NIP_51_LIST_ID_STRATEGY.md  NOSTR_AUTO_RECONNECT_FIX.md  ONBOARDING_RICH_UI_IMPLEMENTATION.md  PERFORMANCE_INVESTIGATION_TODO_CREATION_LAG.md  (+14 more)
docs/_archive/: CLEAN_ARCHITECTURE_REFACTORING_PLAN.md
lib/: app_theme.dart  main.dart
lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/l10n/: app_en.arb  app_es.arb  app_ja.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_ja.dart
lib/models/: app_settings.dart  app_settings.freezed.dart  app_settings.g.dart  custom_list.dart  custom_list.freezed.dart  custom_list.g.dart  (+9 more)
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  group_tasks.rs  group_tasks_mls.rs  key_store.rs  lib.rs  mls.rs
scripts/: .env  .env.example  README_VERIFY.md  verify_group_lists.sh
test/: widget_test.dart
(+174 files in other folders)
