[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Nostr SDK
nostr-sdk = { version = "0.37", features = ["nip44"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Lazy Static
once_cell = "1.20"

# Cryptography
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.21"
hex = "0.4"

# MLS (Messaging Layer Security) - Keychat implementation
openmls = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls"}
openmls_traits = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls_traits"}
openmls_sqlite_storage = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "openmls_sqlite_storage"}
kc = { git = "https://github.com/keychat-io/openmls.git", branch = "kc4", package = "kc"}
bincode = "1.3.3"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"  # 最適化レベル（サイズ優先）
lto = true       # リンク時最適化
codegen-units = 1
strip = true     # シンボル削除
